# datasets

./: CONTRIBUTING.md  LICENSE.md  README.md  datasets.openapi.yaml  environment.yml  postBuild  requirements.txt  runtime.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
client/: .bazelrc  .envrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bzlmod  workspace_status.sh
client/apps/public/Datasets/v2/: go.mod  go.sum
client/apps/public/Datasets/v2/cmd/datasets/: BUILD.bazel  main.go
client/apps/public/Datasets/v2/datasets/: BUILD.bazel  Download.go  DownloadGene.go  DownloadGeneAccession.go  DownloadGeneGeneId.go  DownloadGeneLocusTag.go  DownloadGeneSymbol.go  DownloadGeneTaxon.go  DownloadGenome.go  DownloadGenomeAccession.go  DownloadGenomeTaxon.go  DownloadTaxonomy.go  DownloadTaxonomyTaxon.go  DownloadVirus.go  DownloadVirusGenome.go  DownloadVirusGenomeAccession.go  DownloadVirusGenomeTaxon.go  DownloadVirusProtein.go  GeneDownloader.go  GeneIdRetriever.go  GenomeAccessionRetriever.go  GenomeDownloader.go  PageProcessor.go  Rehydrate.go  ResolveTaxons.go  ResponseHandling.go  Summary.go  SummaryGene.go  SummaryGeneAccession.go  SummaryGeneId.go  SummaryGeneLocusTag.go  SummaryGeneSymbol.go  SummaryGeneTaxon.go  SummaryGenome.go  SummaryGenomeAccession.go  SummaryGenomeTaxon.go  SummaryTaxonomy.go  SummaryTaxonomyTaxon.go  SummaryVirus.go  SummaryVirusGenome.go  (+7 more)
client/apps/public/Datasets/v2/datasets/flags/: AnnotatedOnlyFlag.go  AssemblySourceFlag.go  AssemblyVersionFlag.go  BUILD.bazel  ChromosomesFlag.go  DebugFlag.go  DehydratedFlag.go  DownloadPreviewFlag.go  ErrorFlag.go  ExcludeAtypical.go  ExcludeMultiIsolate.go  FastaFilter.go  GeneIncludeFlag.go  GeneTaxonFilter.go  GenomeAssemblyLevel.go  GenomeIncludeFlag.go  GenomeReportFlag.go  HostTaxonFilter.go  InputFileFlag.go  JsonLinesAndLimitFlag.go  LimitFlag.go  MetaGenomeDerived.go  OrthologTaxonFilterFlag.go  ReferenceOnlyFlag.go  ReleasedDateFlag.go  SearchStringFlag.go  SkipZipValidation.go  TaxChildrenFlag.go  TaxExactMatchFlag.go  TaxParentsFlag.go  TaxonRankFilterFlag.go  TaxonomyDownloadReportFlag.go  TaxonomyReportFlag.go  TypeMaterialFlag.go  VirusDownloadReportFlag.go  VirusFilterFlags.go  VirusIncludeFlag.go  VirusSummaryReportFlag.go  WpDownloadFlags.go  common.go
client/bazel/: deps.bzlmod.bzl
client/go/: go.work
client/go/util/: BUILD.bazel  UsageConfig.go  go.mod
client/go/util/command/: Autocomplete.go  BUILD.bazel
client/openapi/: .spectral.yaml  BUILD  openapi3_v2.yaml
client/openapi/configs/: openapigen.go.config
client/openapi/templates/: .gitignore  go.patch  make_patch.sh
client/openapi/templates/go/: api.mustache  client.mustache  go.mod.mustache  model_enum.mustache
client_docs/python/: README.md
client_docs/python/docs/: AnnotationForAssemblyType.md  AssemblyDatasetDescriptorsApi.md  AssemblyDatasetDescriptorsFilterAssemblyLevel.md  AssemblyDatasetDescriptorsFilterAssemblySource.md  AssemblyDatasetDescriptorsRequestContentType.md  AssemblyDatasetRequestResolution.md  AssemblyMetadataRequestAccessions.md  AssemblyMetadataRequestBioprojects.md  DatasetDownloadApi.md  Datasetsv1alpha1Accessions.md  Datasetsv1alpha1Annotation.md  Datasetsv1alpha1Error.md  DownloadApi.md  DownloadSummaryDehydrated.md  DownloadSummaryError.md  DownloadSummaryHydrated.md  ErrorAssemblyErrorCode.md  ErrorGeneErrorCode.md  ErrorReplacedId.md  ErrorVirusErrorCode.md  GatewayruntimeError.md  GeneApi.md  GeneDatasetDescriptorsApi.md  GeneDatasetRequestFasta.md  GeneDatasetRequestGeneIds.md  GeneDatasetRequestSeqType.md  GeneDatasetRequestSort.md  GeneDatasetRequestSortDirection.md  GeneDatasetRequestSortField.md  GeneDatasetRequestSymbolsForTaxon.md  GeneDescriptorGeneType.md  GeneDescriptorRnaType.md  GenomeApi.md  GenomicRegionGenomicRegionType.md  MicroBiggeDatasetRequestElementFlankConfig.md  OrganismCountByType.md  OrganismCountType.md  OrganismCounts.md  OrganismRankType.md  ProkaryoteApi.md  (+254 more)
docs/: index.md
examples/jupyter/: .gitignore  README.md
examples/jupyter/cli/: .gitignore  Gene_CLI.ipynb  Genome_CLI.ipynb
examples/jupyter/ncbi-datasets-pylib/: ncbi-datasets-assembly.ipynb  ncbi-datasets-gene.ipynb  ncbi-datasets-gff3.ipynb  ncbi-datasets-virus.ipynb
examples/r/: README.md  ncbi.datasets_demo.r  ncbi_datasets_gene_notebook.ipynb  ncbi_datasets_r_notebook.Rmd
pkgs/ncbi-datasets-cli/: .gitignore  LICENSE.md  README.md  WORKSPACE  version.bzl
pkgs/ncbi-datasets-cli/conda/: README.md  bld.bat  build.sh  meta.yaml
pkgs/ncbi-datasets-cli/requirements/: BUILD.bazel  go.mod  go.sum  repositories.bzl
pkgs/ncbi-datasets-cli/src/: BUILD.bazel
training/: NCBI_Datasets_Orthologs.ipynb  NIH_Research_Festival.md  VGP_12062024.md  index.md  readme.md
training/2023-01-03-datasets-cli14/: 2023-01-03-datasets-v14-with-outputs.ipynb  2023-01-03-datasets-v14.ipynb  2023-01-03-datasets-v14_with-outputs.ipynb  datasets.yml  readme.md
training/2023-01-03-datasets-cli14/images/: readme.md
training/ASM-NGS/: ASM-NGS-Datasets.md  README.md
training/BOSC_2022/: BOSC_CoFest_2022.ipynb  Datasets_ElasticBLAST_BOSC2022.ipynb  readme.md
training/BOSC_2022/images/: readme.md
training/TAGC-2024/: README.md  TAGC 2024 workshop with outputs.ipynb  TAGC 2024 workshop.ipynb
training/cshl-2021/: CSHL workshop.pptx  CSHL_10292021.ipynb  CSHL_10292021_binder.ipynb  CSHL_10292021_with_outputs.ipynb  CSHL_Part1_Part2_complete.ipynb  CSHL_Part1_Part2_complete1026.ipynb  CSHL_Part1_Part2_complete1028.ipynb  CSHL_datasets_Nov01.ipynb  CSHL_datasets_Nov01_binder.ipynb  CSHL_datasets_Nov01_no_images-Copy1.ipynb  CSHL_datasets_Nov01_no_images.ipynb  CSHL_datasets_Nov01_outputs.ipynb  CSHL_datasets_Nov01_with_outputs.ipynb  Open Only If your Jupyter Hub does not Have The Tutorial Notebook.ipynb  Open_if_Tutorial_Notebook_Missing.ipynb  README.md  answers.md  genes.txt  genome_json_complete.drawio  index.md  jq_cheatsheet.md
training/cshl-2021/binder/: environment.yml  postBuild
training/images/: readme.md
(+63 files in other folders)
