module(
    name = "datasets_client",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

##########################
## Golang Configuration ##
##########################

# Register the Go SDK installed on the host.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//go:go.work")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_antihax_optional",
    "com_github_araddon_dateparse",
    "com_github_docker_go_units",
    "com_github_gosuri_uiprogress",
    "com_github_hashicorp_go_cleanhttp",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_spf13_afero",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_thediveo_enumflag",
    "com_gitlab_metakeule_fmtdate",
    "org_golang_x_exp",
    "org_golang_x_text",
)

###########
## Other ##
###########

bazel_dep(name = "aspect_bazel_lib", version = "1.38.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "openapi_tools_generator_bazel",
    sha256 = "ada94694b10f2503c52a48427bd8589323bff5910bd1a7e5212ce34702d0af65",
    urls = ["https://github.com/OpenAPITools/openapi-generator-bazel/releases/download/v0.1.6/openapi-tools-generator-bazel-0.1.6.tar.gz"],
)
