module(
    name = "datasets_client",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

##########################
## Golang Configuration ##
##########################

# Register the Go SDK installed on the host.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//go:go.work")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_antihax_optional",
    "com_github_araddon_dateparse",
    "com_github_docker_go_units",
    "com_github_gosuri_uiprogress",
    "com_github_hashicorp_go_cleanhttp",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_spf13_afero",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_thediveo_enumflag_v2",
    "com_gitlab_metakeule_fmtdate",
    "org_golang_x_exp",
    "org_golang_x_text",
)

###########
## Other ##
###########

bazel_dep(name = "aspect_bazel_lib", version = "1.38.1")

bazel_dep(name = "openapi_tools_generator_bazel", version = "0.2.0")

openapi_gen = use_extension("@openapi_tools_generator_bazel//:extension.bzl", "openapi_gen")
openapi_gen.client(
    sha256 = "1cf0c80de12c0fdc8594289c19e414b402108ef10b8dd0bfda1953151341ab5d",
    version = "7.2.0",
)
use_repo(openapi_gen, "openapi_tools_generator_bazel_cli")
