load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "datasets",
    srcs = [
        "Download.go",
        "DownloadGene.go",
        "DownloadGeneAccession.go",
        "DownloadGeneGeneId.go",
        "DownloadGeneSymbol.go",
        "DownloadGeneTaxon.go",
        "DownloadGenome.go",
        "DownloadGenomeAccession.go",
        "DownloadGenomeTaxon.go",
        "DownloadTaxonomy.go",
        "DownloadTaxonomyTaxon.go",
        "DownloadVirus.go",
        "DownloadVirusGenome.go",
        "DownloadVirusGenomeAccession.go",
        "DownloadVirusGenomeTaxon.go",
        "DownloadVirusProtein.go",
        "GeneDownloader.go",
        "GeneIdRetriever.go",
        "GenomeAccessionRetriever.go",
        "GenomeDownloader.go",
        "PageProcessor.go",
        "Rehydrate.go",
        "ResolveTaxons.go",
        "ResponseHandling.go",
        "Summary.go",
        "SummaryGene.go",
        "SummaryGeneAccession.go",
        "SummaryGeneId.go",
        "SummaryGeneSymbol.go",
        "SummaryGeneTaxon.go",
        "SummaryGenome.go",
        "SummaryGenomeAccession.go",
        "SummaryGenomeTaxon.go",
        "SummaryTaxonomy.go",
        "SummaryTaxonomyTaxon.go",
        "SummaryVirus.go",
        "SummaryVirusGenome.go",
        "SummaryVirusGenomeAccession.go",
        "SummaryVirusGenomeTaxon.go",
        "TaxonomyDownloader.go",
        "TaxonomyIdRetriever.go",
        "VirusDownloader.go",
        "progressbar.go",
        "root.go",
    ],
    importpath = "datasets_cli/v2/datasets",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/public/Datasets/v2/datasets/flags",
        "//go/util",
        "//go/util/command",
        "//openapi:golib.v2",
        "@com_github_antihax_optional//:optional",
        "@com_github_docker_go_units//:go-units",
        "@com_github_gosuri_uiprogress//:uiprogress",
        "@com_github_hashicorp_go_cleanhttp//:go-cleanhttp",
        "@com_github_hashicorp_go_retryablehttp//:go-retryablehttp",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_thediveo_enumflag//:enumflag",
        "@com_gitlab_metakeule_fmtdate//:fmtdate",
        "@org_golang_x_exp//slices",
        "@org_golang_x_text//language",
        "@org_golang_x_text//message",
    ],
)
