load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "datasets",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "datasets_cli/v2/datasets",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/public/Datasets/v2/datasets/flags",
        "//go/util",
        "//go/util/command",
        "//openapi:golib.v2",
        "@com_github_antihax_optional//:optional",
        "@com_github_docker_go_units//:go-units",
        "@com_github_gosuri_uiprogress//:uiprogress",
        "@com_github_hashicorp_go_cleanhttp//:go-cleanhttp",
        "@com_github_hashicorp_go_retryablehttp//:go-retryablehttp",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_thediveo_enumflag_v2//:enumflag",
        "@com_gitlab_metakeule_fmtdate//:fmtdate",
        "@org_golang_x_exp//slices",
        "@org_golang_x_text//language",
        "@org_golang_x_text//message",
    ],
)

