load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "datasets_lib",
    srcs = ["main.go"],
    importpath = "datasets_cli/v2/cmd/datasets",
    visibility = ["//visibility:private"],
    deps = ["//apps/public/Datasets/v2/datasets"],
)

go_binary(
    name = "datasets",
    embed = [":datasets_lib"],
    visibility = ["//visibility:public"],
    x_defs = {"datasets_cli/v2/datasets.AppVersion": "{STABLE_GIT_COMMIT}"},
)
