load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "datasets_lib",
    srcs = ["main.go"],
    importpath = "datasets_cli/v2/cmd/datasets",
    visibility = ["//visibility:private"],
    deps = ["//apps/public/Datasets/v2/datasets"],
)

go_binary(
    name = "datasets",
    embed = [":datasets_lib"],
    visibility = ["//visibility:public"],
    x_defs = {"datasets_cli/v2/datasets.AppVersion": "{STABLE_SOFTWARE_VERSION_WITHOUT_PREFIX}"},
)

# [
#     go_binary(
#         name = "{os}-{arch}/datasets".format(os=goos, arch=goarch),
#         embed = [":datasets_lib"],
#         goos = goos,
#         goarch = goarch,
#         visibility = ["//visibility:public"],
#         x_defs = {"datasets_cli/v2/datasets.AppVersion": "{STABLE_SOFTWARE_VERSION_WITHOUT_PREFIX}"},
#     )
#     for goos, goarchs in {
#         "darwin": ["arm64", "amd64"],
#         "linux": ["amd64", "arm64", "arm"],
#         "windows": ["amd64"],
#     }.items()
#     for goarch in goarchs

# ]
