load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "flags",
    srcs = [
        "AnnotatedOnlyFlag.go",
        "AssemblySourceFlag.go",
        "AssemblyVersionFlag.go",
        "ChromosomesFlag.go",
        "DebugFlag.go",
        "DehydratedFlag.go",
        "DownloadPreviewFlag.go",
        "ErrorFlag.go",
        "ExcludeAtypical.go",
        "ExcludeMultiIsolate.go",
        "FastaFilter.go",
        "GeneIncludeFlag.go",
        "GeneTaxonFilter.go",
        "GenomeAssemblyLevel.go",
        "GenomeIncludeFlag.go",
        "GenomeReportFlag.go",
        "HostTaxonFilter.go",
        "InputFileFlag.go",
        "JsonLinesAndLimitFlag.go",
        "LimitFlag.go",
        "MetaGenomeDerived.go",
        "OrthologTaxonFilterFlag.go",
        "ReferenceOnlyFlag.go",
        "ReleasedDateFlag.go",
        "SearchStringFlag.go",
        "SkipZipValidation.go",
        "TaxChildrenFlag.go",
        "TaxExactMatchFlag.go",
        "TaxParentsFlag.go",
        "TaxonRankFilterFlag.go",
        "TaxonomyDownloadReportFlag.go",
        "TaxonomyReportFlag.go",
        "TypeMaterialFlag.go",
        "VirusDownloadReportFlag.go",
        "VirusFilterFlags.go",
        "VirusIncludeFlag.go",
        "VirusSummaryReportFlag.go",
        "WpDownloadFlags.go",
        "common.go",
    ],
    importpath = "datasets_cli/v2/datasets/flags",
    visibility = ["//visibility:public"],
    deps = [
        "//openapi:golib.v2",
        "@com_github_araddon_dateparse//:dateparse",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_thediveo_enumflag//:enumflag",
    ],
)
