load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "flags",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "datasets_cli/v2/datasets/flags",
    visibility = ["//visibility:public"],
    deps = [
        "//openapi:golib.v2",
        "@com_github_araddon_dateparse//:dateparse",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_thediveo_enumflag_v2//:enumflag",
    ],
)

